--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <hr>
         <!----lists section starts----->
         <h1>Vegetables</h1>
-        <h2>leafy vegetables</h2>
+        <h2>Leafy vegetables</h2>
         <ol type="A">
             <li>spinach</li><br>
             <li>beet greens</li><br>
             <li>water spinach</li><br>
 
         </ol>
-        <h2>nonleafy vegetables</h2>
+        <h2>Non-leafy vegetables</h2>
         <ul type="circle">
             <li>tomato</li>
             <li>radish</li>
             <li>mushroom</li>
         </ul>
-        <u>click here</u>
+        <u>Click here</u>
     </body>
 </html>
